# twitter-ai-agent

./: .gitignore  README.md  TODO.md  config.json.sample  pyproject.toml  requirements.txt  tweet.sh
data/: articles.json
docs/: demo-script.md
src/: __init__.py  main.py
src/commands/: autopilot.py  generate.py  history.py  post.py  score.py
src/prompts/: tweet_generation.txt  tweet_scoring.txt
src/services/: ai_service.py  article_service.py  log_service.py  scoring_service.py  twitter_service.py
src/utils/: __init__.py  config.py  helpers.py
tests/: test_cli.py
