[project]
name = "twitter-ai-agent"
version = "0.1.0"
description = "CLI-first AI-assisted posting engine for X / Twitter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tweet-agent = "main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
